kubernetes/11-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <POD_NAME>
  namespace: <NAMESPACE>
spec:
  containers:
    - name: <CONTAINER_NAME>
      image: <IMAGE>
      volumeMounts:
        - name: <VOLUME_NAME>
          mountPath: <MOUNT_PATH>

  volumes:
    - name: <VOLUME_NAME>
      persistentVolumeClaim:
        claimName: <PVC_NAME>
