kubernetes/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>-service
  namespace: <NAMESPACE>
  labels:
    app: <APP_NAME>

spec:
  type: ClusterIP

  selector:
    app: <APP_NAME>

  ports:
    - name: http
      protocol: TCP
      port: <SERVICE_PORT>
      targetPort: <CONTAINER_PORT>
