kubernetes/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-backend-deployment
  namespace: staging
  labels:
    app: clinic-backend
spec:
  replicas: 2
  revisionHistoryLimit: 10

  selector:
    matchLabels:
      app: clinic-backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: clinic-backend

    spec:
      containers:
        - name: clinic-backend
          image: davidnguyendev/backend:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "750m"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: clinic-backend-service
  namespace: staging
  labels:
    app: clinic-backend
spec:
  type: ClusterIP

  selector:
    app: clinic-backend

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinic-backend-ingress
  namespace: staging
spec:
  ingressClassName: nginx

  rules:
    - host: api.vnpt.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clinic-backend-service
                port:
                  number: 8080
